# face-block-chromium-extension

./: .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FIREFOX_MIGRATION_SUMMARY.md  Makefile  PRIVACY.md  README.md  STORE_LISTING.md  build-for-store.sh  eslint.config.js  package-lock.json  package.json  playwright.config.js  tsconfig.json  wxt.config.ts
.github/: README.md  dependabot.yml  labeler.yml
.husky/: pre-push
docs/: OFFSCREEN_DOCUMENT_IMPLEMENTATION.md  PERFORMANCE_REPORT.md  QUICK_REFERENCE.md  SESSION_SUMMARY.md  SESSION_SUMMARY_2024-11-10.md  TESTING.md
extension/: background.js  config.js  content.js  content.js.backup  manifest.json  offscreen.html  offscreen.js  photo-quality.js  popup.html  popup.js  preload-hide.css  preload.js  storage.js  styles.css
scripts/: capture-screenshots.js  generate-performance-test-page.js
store-assets/: PROMO_GUIDE.md  SCREENSHOT_GUIDE.md
tests/: TESTING_GUIDE.md  TESTING_UPDATES.md  block-indicator.spec.js  detector-modes.spec.js  dynamic-src-changes.spec.js  extension.spec.js  face-angles.spec.js  face-detection-with-references.spec.js  flashing-prevention.spec.js  google-images-scenarios.spec.js  image-blocking.spec.js  image-types.spec.js  lighting-conditions.spec.js  performance-profiling.spec.js  (+5 more)
tests/fixtures/generators/image-curator/: CURATION_PHILOSOPHY.md  README.md  curate_trump_images.sh  intelligent_test_curator.py  pyproject.toml  review_curated_images.py  web_review_curated_images.py
tests/fixtures/generators/image-curator/files/: intelligent_test_curator.py
(+49 files in other folders)
